# alpha_serdeser

./: CMakeLists.txt  LICENSE
src/: json_processor.cpp  json_processor.hpp
